snooker-club-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snooker-club-api
  namespace: snooker-club
  labels:
    app: snooker-club-api
    release: snooker-club-api
spec:
  selector:
    matchLabels:
      app: snooker-club-api
      release: snooker-club-api
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: snooker-club-api
        release: snooker-club-api
        tier: backend
    spec:
      imagePullSecrets:
        - name: dockerconfig
      containers:
        - image: registry.gitlab.com/steffbeckers/snooker-club/api
          name: snooker-club-api
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: snooker-club-api
  namespace: snooker-club
  labels:
    app: snooker-club-api
    release: snooker-club-api
spec:
  ports:
    - port: 80
  selector:
    app: snooker-club-api
    release: snooker-club-api
    tier: backend
