snooker-club-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snooker-club-app
  namespace: snooker-club
  labels:
    app: snooker-club-app
    release: snooker-club-app
spec:
  selector:
    matchLabels:
      app: snooker-club-app
      release: snooker-club-app
      tier: frontend
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: snooker-club-app
        release: snooker-club-app
        tier: frontend
    spec:
      imagePullSecrets:
        - name: dockerconfig
      containers:
        - image: registry.gitlab.com/steffbeckers/snooker-club/app
          imagePullPolicy: Always
          name: snooker-club-app
          ports:
            - containerPort: 80
              name: http
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #     initialDelaySeconds: 5
          #     periodSeconds: 5
          #     successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: snooker-club-app
  namespace: snooker-club
  labels:
    app: snooker-club-app
    release: snooker-club-app
spec:
  ports:
    - port: 80
  selector:
    app: snooker-club-app
    release: snooker-club-app
    tier: frontend
