snooker-club-mssql-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: snooker-club-mssql
  namespace: snooker-club
spec:
  type: ExternalName
  externalName: mssql-mssql-linux.mssql.svc.cluster.local
